fix: msg NPE